Better hover covers. Fixed visual bugs

--- a/application/static/theme.css
+++ b/application/static/theme.css
@@ -44,8 +44,7 @@ nav a {
 }
 
 nav a:hover {
-    background-color: rgb(255, 217, 0);
-    color: rgb(50, 96, 139);
+    background-color: rgb(255, 145, 0);
 }
 
 .nav-index {grid-area: index;}
@@ -253,7 +252,7 @@ DETAIL ELEMENTS
 
 .detail-table tr, .detail-table-vertical tr {
     height: 3em;
-    border-bottom: 1px solid #aaa;
+    border-bottom: 1px solid rgb(174, 209, 218);
 }
 
 .detail-table tr:last-child, .detail-table-vertical tr:last-child {
@@ -263,6 +262,10 @@ DETAIL ELEMENTS
 .detail-table-vertical th {
     text-align: left;
 }
+
+/* .detail-table tr:nth-child(even), .detail-table-vertical tr:nth-child(even) {
+    background-color: rgb(255, 250, 208);
+} */
 
 .detail-table th {
     text-align: left;
@@ -283,7 +286,7 @@ DETAIL ELEMENTS
 }
 
 .detail-table a:hover, .detail-table-vertical a:hover{
-    color: rgb(34, 73, 95);
+    color: rgb(255, 145, 0);
 }
 
 
@@ -309,7 +312,7 @@ DETAIL ELEMENTS
 }
 
 .detail-form input[type=text]:focus, .detail-form textarea:focus, .detail-form input[type=password]:focus {
-    border: 1px solid rgb(67, 120, 170);
+    border: 1px solid rgb(180, 219, 255);
 }
 
 .detail-form input[type=submit] {
@@ -325,8 +328,8 @@ DETAIL ELEMENTS
 }
 
 .detail-form input[type=submit]:hover {
-    background-color: rgb(255, 217, 0);
-    color: rgb(50, 96, 139);
+    background-color: rgb(255, 145, 0);
+    color: #fff;
 }
 
 .detail-form .inline{
@@ -374,26 +377,6 @@ a[class=btn] {
 a[class=btn]:hover {
     background-color: rgb(255, 217, 0);
     color: rgb(50, 96, 139);
-}
-
-.btn-blue {
-    background-color: rgb(0, 153, 255);
-}
-
-.btn-blue:hover {
-    background-color: rgb(0, 179, 255);
-}
-
-.btn-red:hover {
-    background-color: rgb(255, 102, 0);
-}
-
-.btn-green {
-    background-color: rgb(0, 230, 85);
-}
-
-.btn-green:hover {
-    background-color: rgb(0, 255, 85);
 }
 
 
